usuario y password de bdd de producción

--- a/ConsoleSelenium/App.config
+++ b/ConsoleSelenium/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="baseprod2Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.16.0.241;initial catalog=baseprod2;persist security info=True;user id=usrBDDesa;password=*pwdBD*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="baseprod2Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.0.0.158;initial catalog=baseprod;persist security info=True;user id=usdes;password=Su_4320$.x;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="baseprod2Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.0.0.158;initial catalog=baseprod;persist security info=True;user id=usr_w3b_chileautos;password=H.J45$ja!c$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
